<resources>
    <string name="app_name">ReservEat</string>
    <string name="title_activity_home_page">Home Page</string>


    <!-- Strings related to menu -->
    <string name="myNotifications" type="id">My Notifications</string>
    <string name="myPickedReservations">RESERVATIONS I PICKED-OUT</string>
    <string name="logOut">Log Out</string>


    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="join">Join</string>
    <string name="sign_up_message">"Don't have an account?  sign up"</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to forms -->
    <string name="error_field_required">This field is required</string>
    <string name="restaurant">Restaurant</string>
    <string name="branch">Branch</string>
    <string name="num_of_people">Num of People</string>
    <string name="required_num_of_people">*Num of People</string>
    <string name="date">Date</string>
    <string name="required_date">*Date</string>
    <string name="hour">Hour</string>
    <string name="required_hour">*Hour</string>
    <string name="is_reservation_on_my_name">"The reservation is on my name"</string>
    <string name="reservation_name">Reservation name</string>
    <string name="required_reservation_name">*Reservation name</string>
    <string name="add_reservation">ADD RESERVATION</string>
    <string name="reservation">RESERVATION</string>


    <!-- Strings related to main activiry -->
    <string name="sort">SORT</string>
    <string name="apply">APPLY</string>
    <string name="notification">NOTIFICATION</string>
    <string name="add">ADD</string>
    <string name="clock_icon">clock_icon</string>
    <string name="man_icon">man_icon</string>
    <string name="sort_by">SORT BY</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string-array name="SortByOptions">
        <item>Reservation Date</item>
        <item>Number Of People</item>
        <item>Hot Reservestions</item>
    </string-array>

    <string name="submit">SUBMIT</string>
    <string name="saveRequest">SAVE REQUEST</string>


    <!-- Strings related to survey form -->
    <string name="q1">How Busy Was The Restaurant?</string>
    <string name="q2">How Whould You Rate The Restaurant?</string>
    <string name="q3">Was there a line at the entrance?</string>
    <string name="q4">Is it necessary to book a place in advance?</string>
    <string name="save">SAVE</string>
    <string name="survey_form">REVIEW</string>
    <string name="my_reservations">My Reservations</string>
    <string name="details">DETAILS</string>


    <string-array name="ReviewBusyRestaurantOptions">
        <item>1 - not busy</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5 - most busy</item>
    </string-array>

    <string-array name="ReviewYesNoOptions">
        <item>Yes</item>
        <item>No</item>
        <item>Not Sure</item>
    </string-array>


    <string name="matchedReservation">MATCHED RESERVATIONS</string>
    <string name="Homepage">Home</string>
    <string name="welcomeHeadline">ReservEat</string>
    <string name="CONTINUE">CONTINUE</string>

    <string name="facebook_app_id">451233721958584</string>
    <string name="fb_login_protocol_scheme">fb451233721958584</string>
    <string name="contactUs">Contact Us</string>
    <string name="emailAddress">contactUs@reserveat.com</string>
    <string name="facebook">Facebook</string>
    <string name="pickingNote">You are responsible to update the restaurant on the change</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="profile">My Profile</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="statistics">Statistics</string>
    <string name="timeOfDay">Parts Of The Day</string>
    <string name="choosePartsOfTheDay">Choose Parts Of The Day...</string>
    <string name="MyReservations">My Reservations</string>
    <string name="MyPickedReservations">My Pick-Out Reservations</string>
    <string name="MyNotificationRequest">My Notification Requests</string>
    <string name="notificationInfo">
        Add notification request and get notification alert when a new cancellation that matches your request is received
        \n\nChoosing the flexible option allows you to get notifications that almost match your request
        (i.e. 2 hour before and after your request)</string>
    <string name="StatisticsInfo">Select a restaurant and a part of the day and get the chances of getting a cancellation on that restaurant.
    \n\nThe graph shows the average of cancellations received on the chosen time by days</string>
    <string name="myPicksSpamInfo">Report the reservation does not exist or inaccurate.
    \n\nAre you sure you want to report the reservation owner?</string>
    <string name="myResSpamInfo">Report the user who picked your cancellation if he picked it and did not arrive to the restaurant.
    \n\nAre you sure you want to report spam?</string>
    <string name="seattingArea">Select seatting area:</string>
    <string-array name="timeOfDayOptions">
        <item>Morning</item>
        <item>Noon</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
    </string-array>
    <string name="title_activity_my_notifications">MyNotificationsActivity</string>

    <string name="notificationDescription">Notification description</string>
    <string name="notification_icon">notificationIcon</string>
    <string name="notification_request">NOTIFICATION REQUEST</string>
    <string name="no_notifications_exist">No notification requests were found \u2639</string>
    <string name="no_reservations_exist">No reservations were found \u2639</string>
    <string name="close_button">close_button</string>
    <string name="details_button_string"> details</string>
    <string name="review_button_string"> review</string>
    <string name="spam_button_string"> spam</string>
    <string name="remove_button_string"> remove</string>
    <string name="restaurant_icon">restaurant_icon</string>
    <string name="restaurant_details">Restaurant:</string>
    <string name="branch_details">Branch:</string>
    <string name="date_details">Date:</string>
    <string name="hour_details">Hour:</string>
    <string name="people_details">People:</string>
    <string name="phone_details">Phone:</string>
    <string name="flexible_details">Time Flexibility:</string>
    <string name="seatting_details">Seatting Area:</string>

    <string name="spam_not_picked_msg">reservation is not picked, can\'t report it</string>
    <string name="spam_reported_msg">reservation is reported</string>
    <string name="remove_picked_msg">reservation is picked, can\'t remove it </string>
    <string name="review_filed_msg">review is already answered</string>
    <string name="review_not_arrived_msg">will open after reservation date will arrive</string>
    <string name="required_notification_description">*Notification Description</string>
    <string name="cancellationStatisticsTitle">CANCELLATION STATISTICS</string>
    <string name="cancellation_statistics">Cancellation Statistics</string>

</resources>