<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/contact_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/add_cancellation"
        android:textColor="#ce3232"
        android:textSize="40sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/restaurant"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/restaurant"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/branch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/branch"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="none" />

    <EditText
        android:id="@+id/hour"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/hour"
        android:inputType="none" />

    <EditText
        android:id="@+id/numOfPeople"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/num_of_people"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/reservationName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/reservation_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/otherInfo"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:breakStrategy="balanced"
        android:fitsSystemWindows="true"
        android:gravity="top"
        android:hint="@string/other_info"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:singleLine="false" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="4dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/add" />
</LinearLayout>