<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content" android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="4dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/restaurantHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/dateHolder"
                android:text="@string/restaurant"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/branchHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/restaurantHolder"
                android:layout_toStartOf="@+id/hourHolder"
                android:text="@string/branch"
                android:textAppearance="?android:textAppearanceMedium" />

            <ImageView
                android:id="@+id/clockIcon"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_below="@+id/hourHolder"
                android:contentDescription="@string/clock_icon"
                app:srcCompat="@mipmap/clock_icon" />

            <TextView
                android:id="@+id/dateHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@+id/clockIcon"
                android:text="@string/date"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/hourHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateHolder"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@+id/clockIcon"
                android:text="@string/hour"
                android:textAppearance="?android:textAppearanceSmall" />

            <ImageView
                android:id="@+id/manIcon"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/hourHolder"
                android:contentDescription="@string/man_icon"
                app:srcCompat="@mipmap/man_icon" />

            <TextView
                android:id="@+id/numOfPeopleHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hourHolder"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@+id/manIcon"
                android:text="@string/num_of_people"
                android:textAppearance="?android:textAppearanceSmall" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>