<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/contact_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="STATISTICS"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:typeface="serif" />

    <ImageButton
        android:id="@+id/infoMsgButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="@null"
        app:srcCompat="@mipmap/infomsg" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaceSize" />

    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment" />

    <EditText
        android:id="@+id/branch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/branch"
        android:inputType="text"
        android:visibility="gone"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaceSize" />


    <EditText
        android:id="@+id/timeOfDayChoice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/choosePartsOfTheDay"
        android:focusable="false"
        android:inputType="text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaceSize" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="4dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@drawable/mybutton"
        android:text="@string/apply" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaceSize" />

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:id="@+id/graph"
        android:visibility="gone"/>

</LinearLayout>

</ScrollView>
