<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7dp">

        <LinearLayout
            android:id="@+id/profileHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mybackground"
            android:orientation="vertical"
            android:padding="16dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spaceSize" />

            <TextView
                android:id="@+id/ProfileHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/star0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:visibility="gone"
                app:srcCompat="@mipmap/stars0" />
            <ImageView
                android:id="@+id/star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:visibility="gone"
                app:srcCompat="@mipmap/stars1" />
            <ImageView
                android:id="@+id/star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:visibility="gone"
                app:srcCompat="@mipmap/stars2" />
            <ImageView
                android:id="@+id/star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/star0"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:visibility="gone"
                app:srcCompat="@mipmap/stars3" />

            <TextView
                android:id="@+id/ResetStarDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spaceSize" />

            <TextView
                android:id="@+id/spamCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/MyReservations"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/MyReservations"
            android:background="@drawable/mybutton"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/MyPickedReservations"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/MyPickedReservations"
            android:textColor="@color/white"
            android:background="@drawable/mybutton"
            android:textSize="20dp" />

        <Button
            android:id="@+id/MyNotificationReq"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/MyNotificationRequest"
            android:textColor="@color/white"
            android:background="@drawable/mybutton"
            android:textSize="20dp" />


    </LinearLayout>

</ScrollView>